Bug 245499 - Okular crash on quit action while was loading file
Summary: Okular crash on quit action while was loading file
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: Comicbook backend (other bugs)
Version First Reported In: 0.10.4
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-23 04:44 UTC by Ilya Konkov
Modified: 2010-08-08 16:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya Konkov 2010-07-23 04:44:51 UTC
Application: okular (0.10.4)
KDE Platform Version: 4.4.4 (KDE 4.4.4) (Compiled from sources)
Qt Version: 4.6.3
Operating System: Linux 2.6.34-gentoo i686
Distribution: "Gentoo Base System release 2.0.1"

-- Information about the crash:
I was trying to open .cbr file, but was impatient and wasn't sure if okular can handle them, so I closed it with Ctrl+Q hotkey and got crash.

The crash can be reproduced every time.

 -- Backtrace:
Application: Okular (okular), signal: Segmentation fault
[KCrash Handler]
#6  0xb3ec3114 in Okular::Document::closeDocument() () from /usr/lib/libokularcore.so.1
#7  0xb3f5039b in Okular::Part::closeUrl() () from /usr/lib/kde4/okularpart.so
#8  0xb3f50938 in Okular::Part::~Part() () from /usr/lib/kde4/okularpart.so
#9  0x08050332 in Shell::~Shell() ()
#10 0xb6b727d5 in qDeleteInEventHandler(QObject*) () from /usr/lib/qt4/libQtCore.so.4
#11 0xb6b73ee8 in QObject::event(QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#12 0xb610f218 in QWidget::event(QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#13 0xb64fa41f in QMainWindow::event(QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#14 0xb726f764 in KMainWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#15 0xb72b7d00 in KXmlGuiWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#16 0xb60b1494 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#17 0xb60b8009 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#18 0xb717d01b in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#19 0xb6b633f2 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#20 0xb6b66e83 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/qt4/libQtCore.so.4
#21 0xb6b66ffe in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/qt4/libQtCore.so.4
#22 0xb6b8f9c0 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/qt4/libQtCore.so.4
#23 0xb598b07c in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#24 0xb598ee88 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#25 0xb598f079 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#26 0xb6b8f486 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#27 0xb616e9c6 in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtGui.so.4
#28 0xb6b619ca in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#29 0xb6b61e2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#30 0xb279b103 in Unrar::startSyncProcess(QStringList const&) () from /usr/lib/kde4/okularGenerator_comicbook.so
#31 0xb279b7df in Unrar::open(QString const&) () from /usr/lib/kde4/okularGenerator_comicbook.so
#32 0xb2798a11 in ComicBook::Document::open(QString const&) () from /usr/lib/kde4/okularGenerator_comicbook.so
#33 0xb279917a in ComicBookGenerator::loadDocument(QString const&, QVector<Okular::Page*>&) () from /usr/lib/kde4/okularGenerator_comicbook.so
#34 0xb3ec0bbf in Okular::DocumentPrivate::openDocumentInternal(KSharedPtr<KService> const&, bool, QString const&, QByteArray const&) () from /usr/lib/libokularcore.so.1
#35 0xb3ec7caf in Okular::Document::openDocument(QString const&, KUrl const&, KSharedPtr<KMimeType> const&) () from /usr/lib/libokularcore.so.1
#36 0xb3f5ac7f in Okular::Part::openFile() () from /usr/lib/kde4/okularpart.so
#37 0xb7767519 in KParts::ReadOnlyPart::openUrl(KUrl const&) () from /usr/lib/libkparts.so.4
#38 0xb3f4d3d8 in Okular::Part::openUrl(KUrl const&) () from /usr/lib/kde4/okularpart.so
#39 0x08050882 in Shell::openUrl(KUrl const&) ()
#40 0x08050998 in Shell::delayedOpen() ()
#41 0x080511eb in Shell::qt_metacall(QMetaObject::Call, int, void**) ()
#42 0xb6b6873a in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/qt4/libQtCore.so.4
#43 0xb6b77355 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/qt4/libQtCore.so.4
#44 0xb6b7ec28 in QSingleShotTimer::timeout() () from /usr/lib/qt4/libQtCore.so.4
#45 0xb6b7ed3d in QSingleShotTimer::timerEvent(QTimerEvent*) () from /usr/lib/qt4/libQtCore.so.4
#46 0xb6b73cfc in QObject::event(QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#47 0xb60b1494 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#48 0xb60b7f6e in QApplication::notify(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#49 0xb717d01b in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#50 0xb6b633f2 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#51 0xb6b92b5e in QTimerInfoList::activateTimers() () from /usr/lib/qt4/libQtCore.so.4
#52 0xb6b8f7c5 in timerSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/qt4/libQtCore.so.4
#53 0xb598b07c in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#54 0xb598ee88 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#55 0xb598f079 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#56 0xb6b8f486 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#57 0xb616e9c6 in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtGui.so.4
#58 0xb6b619ca in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#59 0xb6b61e2a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#60 0xb6b670c1 in QCoreApplication::exec() () from /usr/lib/qt4/libQtCore.so.4
#61 0xb60b1538 in QApplication::exec() () from /usr/lib/qt4/libQtGui.so.4
#62 0x0804f5d7 in main ()

This bug may be a duplicate of or related to bug 211765.

Possible duplicates by query: bug 233531, bug 225610, bug 223632, bug 218789.

Reported using DrKonqi
Comment 1 Pino Toscano 2010-08-08 16:48:35 UTC
SVN commit 1160615 by pino:

do not process the user events while executing the rar processes

BUG: 245499


 M  +1 -1      unrar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1160615
Comment 2 Pino Toscano 2010-08-08 16:50:42 UTC
SVN commit 1160617 by pino:

do not process the user events while executing the rar processes

CCBUG: 245499
FIXED-IN: 4.5.1


 _M            . (directory)  
 M  +1 -1      generators/comicbook/unrar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1160617