do not process the user events while executing the rar processes

BUG: 245499

svn path=/trunk/KDE/kdegraphics/okular/; revision=1160615